# graph-manager

./: CMakeLists.txt  README.md
aizoGraph/: CMakeLists.txt  main.cpp
aizoGraph/Algorithms/: BellmanFord.h  Dijkstra.h  Kruskal.h  Prim.h  ShortestPath.h
aizoGraph/Control/: FileHandler.h  Manager.h  Worker.h  WorkerFactory.h
aizoGraph/Structures/: Graph.h  LinkedList.h
aizoGraph/Timer/: Timer.cpp  Timer.h
